Testing models, django-admin, django-shell

--- a/project_articles/webapp/templates/article_view.html
+++ b/project_articles/webapp/templates/article_view.html
@@ -10,10 +10,17 @@
 
 </head>
 <body>
-    <h1>Future article:</h1>
-    <h2>{{ title }}</h2>
-    <p>{{ content }}</p>
-    <p>By: {{ author }}</p>
+
+    <p><a href="/">На главную</a></p>
+
+    <h1>Article:</h1>
+
+    <h2>{{ article.title }}</h2>
+
+    <p>{{ article.text }}</p>
+
+    <p>By: {{ article.author }}</p>
+
 </body>
 
 </html>
