--- a/project_articles/webapp/templates/index.html
+++ b/project_articles/webapp/templates/index.html
@@ -47,14 +47,19 @@
 </head>
 
 <body>
+<h1>Articles</h1>
 
-<div class="container">
+    <p><a href="/articles/add/">Добавить</a></p>
 
-    <p>This is my first Django project!</p>
+{% for article in articles %}
 
-    <p>Hello World!</p>
+    <h2>{{ article.title }}</h2>
 
-</div>
+    <p><a href="/article/?pk={{ article.pk }}">Подробнее...</a></p>
+
+    <hr>
+
+{% endfor %}
 
 </body>
 
